[gd_scene load_steps=20 format=2]

[ext_resource path="res://escenas/Actividad_1/Actividad1.gd" type="Script" id=1]
[ext_resource path="res://fondos/Fondo_A1.png" type="Texture" id=2]
[ext_resource path="res://sprites/lugares/Vicuña.png" type="Texture" id=3]
[ext_resource path="res://sprites/lugares/Rio_claro.png" type="Texture" id=4]
[ext_resource path="res://sprites/lugares/Rio_turbio.png" type="Texture" id=5]
[ext_resource path="res://sprites/lugares/Paihuano.png" type="Texture" id=6]
[ext_resource path="res://sprites/lugares/MonteGrande.png" type="Texture" id=7]
[ext_resource path="res://sprites/lugares/Casa-Gabriela-Mistral.png" type="Texture" id=8]
[ext_resource path="res://audios/voz/Intro_A1.wav" type="AudioStream" id=9]
[ext_resource path="res://audios/voz/Vicuña.wav" type="AudioStream" id=10]
[ext_resource path="res://audios/voz/Río_Claro.wav" type="AudioStream" id=11]
[ext_resource path="res://audios/voz/Rio_Turbio.wav" type="AudioStream" id=12]
[ext_resource path="res://audios/voz/Paihuano.wav" type="AudioStream" id=13]
[ext_resource path="res://audios/voz/Monte_grande.wav" type="AudioStream" id=14]
[ext_resource path="res://audios/voz/Museo_GM.wav" type="AudioStream" id=15]
[ext_resource path="res://audios/voz/tecla_incorrecta.wav" type="AudioStream" id=16]
[ext_resource path="res://audios/efectos/rio_1.ogg" type="AudioStream" id=17]
[ext_resource path="res://audios/efectos/rio_2.ogg" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "places",
"speed": 1.0
} ]

[node name="Actividad1" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Fondo_A1" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 2046.0
margin_bottom = 1150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 2033.0
margin_bottom = 1137.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="CenterContainer" index="0"]

position = Vector2( 1023.75, 570.32 )
scale = Vector2( 1.1209, 0.893306 )
frames = SubResource( 1 )
animation = "places"
frame = 1

[node name="Intro" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Vicunia" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Rio_claro" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Rio_turbio" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Paihuano" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Monte_grande" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Museo" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Tecla_incorrecta" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 16 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="rio_1" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 17 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="rio_2" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 18 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="frame_changed" from="CenterContainer/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]


